# tts

./: .dockerignore  .gitignore  Dockerfile  Makefile  QUICK_START.md  README.md  audio_player.py  config.py  config.yaml  convert_pdfs_to_txt.py  docker-compose.yml  edge_tts_async.py  file_manager.py  input.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  test_unified_system.py  text_processor.py  translator.py  tts_endpoint.py  tts_generator.py  voices_cache.json
.github/workflows/: ci.yml
docs/: COMPONENT_COMPARISON.md  FILE_MANAGEMENT.md  MCP_INTEGRATION_SUMMARY.md  MERGE_SUMMARY.md  QUICK_START.md  README_UNIFIED.md  REPO_ORGANIZATION.md  SERVER_OPTION.md  SERVER_OPTION_IMPLEMENTATION.md  SINGLETON_FIX.md  UNIFIED_FILE_MANAGEMENT_CHANGES.md  dark_mode_summary.md  index.md  plan_webpage_modifications.md
examples/: input.txt  translated.txt
mcp/: MCP_README.md  MCP_SUCCESS_SUMMARY.md  install_mcp.py  mcp_config.json  mcp_server.py  test_mcp_server.py
scripts/: README.md
src/: README.md  api_server.py  audio_player.py  config.py  file_manager.py  logging_utils.py  main.py  settings.py  text_processor.py  translator.py  tts_generator.py  tts_service.py  web_server.py
static/: README.md  index.html
tests/: README.md  __init__.py  test_basic_functionality.py  test_integration.py  test_server_option.py  test_unified_file_management.py  test_unified_system.py
