[project]
name = "tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "edge-tts>=7.0.1",
    "websockets>=15.0.1",
    "fastapi>=0.111.0", # Added FastAPI
    "uvicorn[standard]>=0.29.0", # Added Uvicorn ASGI server
    "pygame>=2.6.1",
]
