[project]
name = "tts"
version = "0.1.0"
description = "A flexible CLI Text-to-Speech tool with translation and chunked playback."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "", email = "" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "edge-tts>=7.0.2",
    "googletrans==4.0.0rc1",
    "pygame>=2.6.1",
    "pyyaml>=6.0.2",
]

[project.scripts]
tts = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"src" = ["../config.yaml"]
